컨텐츠 프로그래밍 진행중.
몬스터 배치 완료.

0.85~1.0 랜덤 값. 완료.

일반 몬스터 공격과 피격 사운드가 같은 버그. 완료

사망 사운드가 안나오는 버그. 완료.

록온 사운드.  완료.

중간 보스 몬스터 3타 효과음 추가. 완료.

배경음 추가. 완료.

몬스터 재 생성시 슈퍼아머 및 애니메이션 초기화 시킬 것. 완료.

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.cpp" />
@@ -264,6 +266,8 @@
     <ClCompile Include="src\DUOLClient\Manager\SystemManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.h" />
