--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -1,6 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Contents\DominationArea.cpp" />
+    <ClCompile Include="src\DUOLClient\Manager\EnemyAudioManager.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\InGameUI.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Map\FadeInOut.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteMonsterNormalOrHeavyAttack.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_SuperArmorUpdate.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsSuperArmor.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsInPatrolRange.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsChaseRange.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Map\Portal.cpp" />
+    <ClCompile Include="src\DUOLClient\Manager\GameManager.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Overdrive.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemyAirborneCheck.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemyParentObjectObserver.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\Weapon_Wave.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.cpp" />
+    <ClCompile Include="src\DUOLClient\Util\BinaryTree.cpp" />
+    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\EnemyManager.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\ParticleData.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\ParticleManager.cpp" />
@@ -49,47 +81,44 @@
     <ClCompile Include="src\DUOLClient\Player\Weapon_Sword.cpp" />
     <ClCompile Include="src\DUOLClient\Util\EventListenerIDHolder.cpp" />
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Projectile.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Down.cpp" />
-    <ClCompile Include="src\DUOLClient\Util\BinaryTree.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\Weapon_Wave.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemyParentObjectObserver.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\EnemyAirborneCheck.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Overdrive.cpp" />
     <ClCompile Include="src\DUOLClient\Player\Weapon_AreaWave.cpp" />
-    <ClCompile Include="src\DUOLClient\Manager\GameManager.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsChaseRange.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsInPatrolRange.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsSuperArmor.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_SuperArmorUpdate.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteMonsterNormalOrHeavyAttack.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Map\Portal.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Map\FadeInOut.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\InGameUI.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.cpp" />
-    <ClCompile Include="src\DUOLClient\Manager\EnemyAudioManager.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Contents\DominationArea.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\UIDataManager.cpp" />
-    <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Ultimate.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.cpp" />
-
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.cpp" />
-    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.cpp" />
-
     <ClCompile Include="src\DUOLClient\Manager\SystemManager.cpp" />
-
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
+    <ClInclude Include="include\DUOLClient\Manager\EnemyAudioManager.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Map\FadeInOut.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteMonsterNormalOrHeavyAttack.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SuperArmorUpdate.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsSuperArmor.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyEventFunctions.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyHits.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsInPatrolRange.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsChaseRange.h" />
+    <ClInclude Include="include\DUOLClient\Manager\GameManager.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAirborneCheck.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyParentObjectObserver.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
+    <ClInclude Include="include\DUOLClient\Manager\UIDataManager.h" />
+    <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
+    <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyManager.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.h" />
@@ -139,45 +168,14 @@
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Interaction.h" />
     <ClInclude Include="include\DUOLClient\Manager\ParticleManager.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\ParticleData.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Projectile.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Down.h" />
-    <ClInclude Include="include\DUOLClient\Util\BinaryTree.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemySpawnTrigger.h" />
     <ClInclude Include="include\DUOLClient\Player\Weapon_Wave.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyParentObjectObserver.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAirborneCheck.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsAirborne.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NavMeshAgentOn_RigidbodyOff.h" />
     <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Overdrive.h" />
     <ClInclude Include="include\DUOLClient\Player\Weapon_AreaWave.h" />
-    <ClInclude Include="include\DUOLClient\Manager\GameManager.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsChaseRange.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsInPatrolRange.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyHits.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyEventFunctions.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsSuperArmor.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SuperArmorUpdate.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteMonsterNormalOrHeavyAttack.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Map\Portal.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Map\FadeInOut.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\InGameUI.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.h" />
-    <ClInclude Include="include\DUOLClient\Manager\EnemyAudioManager.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
-    <ClInclude Include="include\DUOLClient\Player\FSM\PlayerState_Ultimate.h" />
-    <ClInclude Include="include\DUOLClient\Manager\UIDataManager.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_CloseEnemyRayCast.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_NormalEnemySoundUpdate.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
-    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemySoundUpdate.h" />
+    <ClInclude Include="include\DUOLClient\Manager\SystemManager.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.h" />
   </ItemGroup>
-
-    <ClInclude Include="include\DUOLClient\Manager\SystemManager.h" />  </ItemGroup>
-
 </Project>
