--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -86,6 +86,7 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\OpenDoor.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_AreaWave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
@@ -177,5 +178,6 @@
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemySoundPlay.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\OpenDoor.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_AreaWave.h" />
   </ItemGroup>
 </Project>
