--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -87,6 +87,7 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\OpenDoor.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_AreaWave.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Map\MiniMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
@@ -179,5 +180,6 @@
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EnemyVoiceSoundPlay.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\OpenDoor.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_AreaWave.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Map\MiniMap.h" />
   </ItemGroup>
 </Project>
