--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -90,6 +90,8 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\Map\MiniMap.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\MaterialOptionChanger.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\TrainAnimation.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\CautionBorder.cpp" />
+    <ClCompile Include="include\DUOLClient\ECS\BossZoneTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
@@ -185,5 +187,7 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\Map\MiniMap.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\TrainAnimation.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\MaterialOptionChanger.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\CautionBorder.h" />
+    <ClInclude Include="include\DUOLClient\ECS\BossZoneTrigger.h" />
   </ItemGroup>
 </Project>
