--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -92,6 +92,10 @@
     <ClCompile Include="src\DUOLClient\ECS\Component\TrainAnimation.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\CautionBorder.cpp" />
     <ClCompile Include="include\DUOLClient\ECS\BossZoneTrigger.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\FirstMonsterTrigger.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\BStageCameraColiision.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\BStageFactoryTrigger.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\BStageMonsterWaveCameraTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemySoundUpdate.h" />
@@ -189,5 +193,9 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\MaterialOptionChanger.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CautionBorder.h" />
     <ClInclude Include="include\DUOLClient\ECS\BossZoneTrigger.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\FirstMonsterTrigger.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\BStageCameraColiision.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\BStageFactoryTrigger.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\BStageMonsterWaveCameraTrigger.h" />
   </ItemGroup>
 </Project>
